Rename device type

--- a/templates/config-wb-dali.json.jinja
+++ b/templates/config-wb-dali.json.jinja
@@ -5,7 +5,7 @@
 
 {
     "title": "WB-DALI_template_title",
-    "device_type": "WB-MDALI",
+    "device_type": "WB-DALI",
     "group": "g-wb",
     "hw": [
         {
