Feature/prj 592 dali template (#1043)
* template rework for 0.0.0-rc3x versions

---------

Co-authored-by: Nikolay Korotkiy <sikmir@disroot.org>
Co-authored-by: Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>

--- a/templates/config-wb-mdali.json.jinja
+++ b/templates/config-wb-mdali.json.jinja
@@ -338,11 +338,11 @@
         ],
         "translations": {
             "en": {
-                "WB-MDALI_template_title": "WB-MDALI (3-channel RS485-DALI gate)",
-                "baud_rate_description": "Make sure that communication with the device is estabilished before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600"
+                "WB-MDALI_template_title": "WB-MDALI (3-channel RS485-DALI gate) v1.0",
+                "baud_rate_description": "Make sure that communication with the device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600"
             },
             "ru": {
-                "WB-MDALI_template_title": "WB-MDALI (3-канальный шлюз RS485-DALI)",
+                "WB-MDALI_template_title": "WB-MDALI (3-канальный шлюз RS485-DALI) v1.0",
                 "Bus states": "Состояние шин",
                 "Error counters": "Счетчики ошибок",
                 "Transparent mode": "Прозрачный режим",
