Add fw4.35 into templates title

--- a/templates/config-wb-m1w2-multiple_w1.json.jinja
+++ b/templates/config-wb-m1w2-multiple_w1.json.jinja
@@ -561,7 +561,7 @@
                 "temperature_readings_period_s_description": "When changing this parameter, you should also change the erroneous values filter coefficient. The default value is 2",
                 "w1_sensors_description": "If the sensor is not used, specify '0'.<br><br>When adding new sensors, do not forget to read the parameters from the device (the 'Reread paramaters' button) and then save it (the 'Save config' button).<br>Otherwise, when connecting to the device, the previously saved parameters will be loaded.",
 
-                "WB-M1W2_template_title": "WB-M1W2 (2-channel temperature measurement and pulse-counter module)",
+                "WB-M1W2_template_title": "WB-M1W2 fw4.35 (2-channel temperature measurement and pulse-counter module)",
                 "baud_rate_description": "Make sure that communication with the device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value. Default value is 9600",
                 "units": "s",
 
@@ -574,7 +574,7 @@
                 "debounce_time_description": "For press detection must be 5-10 times less than the second press waiting time. Adds a delay to the response to presses. Default value is 50"
             },
             "ru": {
-                "WB-M1W2_template_title": "WB-M1W2 (2-канальный преобразователь для термометров 1-Wire с функцией счётных входов)",
+                "WB-M1W2_template_title": "WB-M1W2 fw4.35 (2-канальный преобразователь для термометров 1-Wire с функцией счётных входов)",
                 "1-Wire Bus": "Шина 1-Wire",
                 {% for in_num in range(FIRST_INPUT, INPUTS_NUMBER + 1) -%}
                 "Input {{in_num}}": "Вход {{in_num}}",
